# ds-caselaw-ingester

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  lambda_function.py  pull_request_template.md  pyproject.toml  renovate.json  setup.cfg  template.yml  test
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  codeql.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  secrets.yml  terraform-plan.yml  terraform.yml
aws_examples/s3/te-editorial-out-int/: TRE-TDR-2022-DNWR-metadata.json  te-metadata.json
aws_examples/sns/: example_message.json  parsed-judgment-v2.json  parsed-judgment.json  press-summary.json
docs/: deploy.md  uri_logic.md  workflow.md
ds-caselaw-ingester/: content_sqid.py  exceptions.py  ingester.py  lambda_function.py  test_sqid.py  test_tar_wrapper.py  tests.py
ds_caselaw_ingester/: exceptions.py  ingester.py  lambda_function.py
notify_templates/email/: new_judgment.md  updated_judgment.md
requirements/: base.txt  local.txt
scripts/: inbound-s3-sns.json  setup-localstack.sh  test  update-lambda.sh
src/ds_caselaw_ingester/: exceptions.py  file_helpers.py  ingester.py  lambda_function.py  messages.py
terraform/: alarms.tf  main.tf  outputs.tf  providers.tf  slack_alarms.tf  variables.tf
tests/: conftest.py  helpers.py  test_all_messages.py  test_file_helpers.py  test_fixtures.py  test_handler.py  test_identifier_assignment.py  test_ingest.py  test_ingester.py  test_ingester_methods.py  test_lambda_function.py  test_main.py  test_metadata_storage.py  test_notifications.py  test_sqs_handler.py  tests.py
