[project]
name = "ds-caselaw-ingester"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django-environ~=0.10",
    "ds-caselaw-marklogic-api-client==45.0.0",
    "requests-toolbelt~=1.0",
    "urllib3~=2.2",
    "boto3",
    "rollbar",
    "notifications-python-client~=10.0",
    "codeguru_profiler_agent==1.2.6",
    "mypy-boto3-s3",
    "mypy-boto3-sns",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "awscli",
    "awscli-local",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "callee==0.3.1",
    "aws-sam-cli",
    "cfn-lint==1.48.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "G004", "PLR2004", "RUF005", "RUF012", "UP040"] # longlines, fstrings in logs, magic values, consider not concat, mutable classbits, type instead of TypeAlias
extend-select = ["G", "W", "I", "SLF", "SIM", "B", "Q", "A", "COM", "C90", "UP", "YTT", "ASYNC", "BLE", "C4", "DTZ", "T10", "DJ", "EXE", "S"]
# extend-select = ["EM", "FA", "ISC", "ICN", "INP", "PIE", "T20", "PYI", "PT", "RSE", "RET",
#                  "SLOT", "TID", "TCH", "INT", "PTH", "FIX", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"]
unfixable = ["ERA"]

[tool.ruff.lint.extend-per-file-ignores]
"*" = ["S108"] # insecure hardcoded temp file name -- fix at some point?
"tests/*" = ["S101"]   # `assert` is fine in tests

# things skipped:
# N: naming, possibly good
# D: docstrings missing throughout
# ANN: annotations missing throughout
# FBT: not convinced boolean trap worth auto-banning.
# CPY: copyright at top of each file
# ARG: sometimes you need to accept arguments.
# TD: somewhat finicky details about formatting TODOs
# FIX: flags todos: possible to add -- skipped for now
# ERA: lots of false positives, not a good autofix
# PD, NPY, AIR: ignored, panda / numpy / airflow specific
# FURB: not yet out of preview
